// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders First Name correctly 1`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
  id="mui-1"
  name="firstName"
  type="text"
  value=""
/>
`;

exports[`App renders First Name correctly 2`] = `
<input
  aria-invalid="false"
  class="MuiOutlinedInput-input MuiInputBase-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
  id="mui-1"
  name="firstName"
  type="text"
  value="Alexander"
/>
`;
